kubernetes/dev/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vg-store-java-spring-service
spec:
  selector:
    app: vg-store-java-spring
  ports:
    - protocol: TCP
      port: 8080 # Puerto expuesto dentro del cluster
      targetPort: 8080 # Puerto en el contenedor Flask
  type: ClusterIP
