kubernetes/dev/k8s-ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vg-store-java-spring-ingress
  namespace: vg-store-java-spring-dev
spec:
  rules:
  - http:
      paths:
      - path: "/api/v1/vg-hc-store/data"
        pathType: Prefix
        backend:
          service:
            name: vg-store-java-spring-service
            port:
              number: 8080
